# thrombus-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ci_smoke.yaml  continuous.yaml  demo_cpu.yaml  geometry.yaml  physio_params.yaml  pilot.yaml  training.yaml
docs/: continuous_surrogate_design.md
notebooks/: 01_explore_mechanistic_baseline.ipynb  02_explore_continuous_surrogate.ipynb
scripts/: convergence_study.py  diagnose_thrombin_reaction_stiffness.py  evaluate_extrapolation.py  evaluate_extrapolation_continuous.py  sensitivity_study.py
src/thrombus_bench/benchmark/: calibration.py  edge_holdout_eval.py  extrapolation_eval.py  metrics.py  ood_eval.py  run_benchmark.py
tests/: test_baselines.py  test_benchmark_metrics.py  test_bootstrap_metrics.py  test_continuous_baselines.py  test_continuous_eval.py  test_coordinate_decoder.py  test_coordinate_encoding.py  test_coupled_solver.py  test_dataset_qc_fields.py  test_dataset_reliability_flag.py  test_extrapolation_holdout.py  test_fluid_mask.py  test_geometry_sdf.py  test_m_at_wall_rasterization.py  test_mechanistic_conservation.py  test_metrics_pointwise.py  test_n_snapshots.py  test_neural_forward.py  test_normalization.py  test_phase6_integration.py  test_physics_losses.py  test_physics_losses_autograd.py  test_pointcloud_dataset.py  test_pointcloud_sample.py  test_rasterize_continuous.py  test_run_benchmark_continuous.py  test_run_benchmark_thrombus_iou.py  test_split_sample_level_integrity.py  test_surface_ode.py  test_train_continuous.py  test_uncertainty.py
verification/: convergence_study.md  sensitivity_study.md
(+23 files in other folders)
