[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thrombus-bench"
version = "0.1.0"
description = "Benchmark of a mechanistic 2D thrombus formation model against a biophysics-aware neural surrogate, following Cardillo, Pouponneau & Barakat (2026)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "thrombus-bench contributors" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-fem>=10.0",
    "torch>=2.2",
    "matplotlib>=3.8",
    "pydantic>=2.7",
    "pytest>=7.4",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "h5py>=3.10",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
fenicsx = [
    # Not pip-installable on most platforms (requires conda / system packages
    # such as PETSc, MPI, and a compiled dolfinx). Documented as an optional,
    # not-default backend -- see README.md "Solver backend" section.
    "fenics-dolfinx; platform_system=='Linux'",
]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[project.scripts]
thrombus-run-simulation = "thrombus_bench.mechanistic.run_simulation:main"
thrombus-generate-dataset = "thrombus_bench.data.generate_dataset:main"
thrombus-train = "thrombus_bench.neural.train:main"
thrombus-benchmark = "thrombus_bench.benchmark.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
